# tcp-from-scratch

./: .gitignore  CMakeLists.txt  README.md  cmake_init_shared.bat  cmake_init_shared.sh  cmake_init_static.bat  cmake_init_static.sh
include/: arp.h  endian.h  eth.h  ip.h  iputils.h  network.h  os.h  rawsocket.h  rawtcp.h  tcp.h  thread.h
src/: arp.c  endian.c  eth.c  ip.c  iputils.c  main.c  tcp.c  test.c
src/bsd/: network.c  rawsock.c
src/nux/: rawsock.c  thread.c
src/uni/: network.c  rawsock.c
src/win/: network.c  rawsock.c  thread.c
